# promegraph

./: Cargo.toml  Dockerfile  flake.nix  justfile  readme.md
.github/workflows/: rust.yml
examples/: label.rs  textplot.rs  timeseries.rs  two.rs
src/: backend.rs  backend_ratatui.rs  backend_textplots.rs  main.rs  promql.rs
